Removed reference to DATABASE_URL

--- a/pylistener/development.ini
+++ b/pylistener/development.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = os.environ["DATABASE_URL"]
+; sqlalchemy.url = os.environ["DATABASE_URL"]
 
 
 # By default, the toolbar only appears for clients from IP addresses
