--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist = py27, py35
 
 [testenv]
-commands = py.test pylistener/tests.py
+commands = py.test pylistener --cov pylistener --cov-report term-missing
 deps =
     pytest
+    pytest-cov
     webtest
