--- a/production.ini
+++ b/production.ini
@@ -14,6 +14,14 @@ pyramid.default_locale_name = en
 
 sqlalchemy.url = sqlite:///%(here)s/pylistener.sqlite
 
+[filter:paste_prefix]
+use = egg:PasteDeploy#prefix
+
+[pipeline:main]
+pipeline =
+    paste_prefix
+    pylistener
+
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
