working over https

--- a/production.ini
+++ b/production.ini
@@ -3,7 +3,7 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.7-branch/narr/environment.html
 ###
 
-[app:main]
+[app:pylistener]
 use = egg:pylistener
 
 pyramid.reload_templates = false
@@ -13,6 +13,14 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
 sqlalchemy.url = sqlite:///%(here)s/pylistener.sqlite
+
+[filter:paste_prefix]
+use = egg:PasteDeploy#prefix
+
+[pipeline:main]
+pipeline = 
+    paste_prefix
+    pylistener
 
 [server:main]
 use = egg:waitress#main
