--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ passlib==1.7.0
 PasteDeploy==1.5.2
 pexpect==4.2.1
 pickleshare==0.7.4
+pluggy==0.4.0
 prompt-toolkit==1.0.9
 psycopg2==2.6.2
 ptyprocess==0.5.1
@@ -29,15 +30,17 @@ requests==2.12.4
 simplegeneric==0.8.1
 six==1.10.0
 SQLAlchemy==1.1.4
+tox==2.5.0
 traitlets==4.3.1
 transaction==2.0.3
 translationstring==1.3
 venusian==1.0
+virtualenv==15.1.0
 waitress==1.0.1
 wcwidth==0.1.7
 WebOb==1.7.0
 WebTest==2.0.24
-yagmail==0.5.149
+yagmail==0.5.156
 zope.deprecation==4.2.0
 zope.interface==4.3.3
 zope.sqlalchemy==0.7.7
