--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ psycopg2==2.6.2
 ptyprocess==0.5.1
 py==1.4.32
 Pygments==2.1.3
+-e git+https://github.com/PyListener/CF401-Project-1---PyListener.git@dacf54c49e810f5a497f0132083d7436e094f7e7#egg=pylistener
 pyramid==1.7.3
 pyramid-debugtoolbar==3.0.5
 pyramid-jinja2==2.7
@@ -40,7 +41,7 @@ waitress==1.0.1
 wcwidth==0.1.7
 WebOb==1.7.0
 WebTest==2.0.24
-yagmail==0.5.156
+yagmail==0.5.149
 zope.deprecation==4.2.0
 zope.interface==4.3.3
 zope.sqlalchemy==0.7.7
